Bug 182414 - Konsole 2.2 from KDE 4.2.0 does not allow blinking text to be disabled despite unchecking the box.
Summary: Konsole 2.2 from KDE 4.2.0 does not allow blinking text to be disabled despit...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-30 13:01 UTC by Tim Burrell
Modified: 2009-03-16 02:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch against trunk to allow disable text blinking (2.43 KB, patch)
2009-02-01 05:45 UTC, Kurt Hindenburg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Burrell 2009-01-30 13:01:51 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

With Konsole 2.2 from KDE 4.2.0 (Ubuntu PPA packages) the "Allow blinking text" option under the advanced tab in the current profile properties does not do anything.  If I deselect allow blinking text, I still get blinking text.
Comment 1 Miroslav Bendik 2009-01-31 12:29:44 UTC
*** This bug has been confirmed by popular vote. ***
Comment 2 Kurt Hindenburg 2009-02-01 05:45:41 UTC
Created attachment 30807 [details]
Patch against trunk to allow disable text blinking

Please test if you are able.
Comment 3 Kurt Hindenburg 2009-02-27 06:47:31 UTC
SVN commit 932642 by hindenburg:

Allow the disabling of blinking text.

BUG: 182414


 M  +17 -0     TerminalDisplay.cpp  
 M  +4 -0      TerminalDisplay.h  
 M  +3 -0      ViewManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=932642
Comment 4 Kurt Hindenburg 2009-03-16 02:05:37 UTC
SVN commit 939933 by hindenburg:

Allow the disabling of blinking text.

BUG: 182414


 M  +17 -0     TerminalDisplay.cpp  
 M  +4 -0      TerminalDisplay.h  
 M  +3 -0      ViewManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939933