Allow the disabling of blinking text.

BUG: 182414

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=932642